<resources>
    <string name="app_name">Millionaire_Hannumc1</string>
    <string name="splash">Who wants to be a millionaire?</string>
    <string name="progress">You earned: $</string>
    <string name="progresstotal">0</string>
    <string name="submitButton">Submit</string>
    <string name="Lost">Sorry! Better luck next time!</string>
    <string name="winner">Congratulations!</string>
    <string name="WinEarning">You won $</string>
    <string name="tryAgain">Play again</string>
    <string name="Correct">Correct! You just earned $</string>
    <string name="Incorrect">Sorry that answer was incorrect!</string>
    <string name="IncorrectEarning">You still earned $</string>
    <string name="Question1">How many soccer players should each team have on the field at the start of each match?</string>
    <string name="Q1C1">10</string>
    <string name="Q1C2">11</string>
    <string name="Q1C3">12</string>
    <string name="Q1C4">9</string>
    <string name="Question2">Which natural disaster is measured with a Richter scale?</string>
    <string name="Q2C1">Earthquakes</string>
    <string name="Q2C2">Tornadoes</string>
    <string name="Q2C3">Hurricanes</string>
    <string name="Q2C4">Tsunamis</string>
    <string name="Question3">What’s the primary ingredient in hummus?</string>
    <string name="Q3C1">Garlic</string>
    <string name="Q3C2">Flour</string>
    <string name="Q3C3">Chickpeas</string>
    <string name="Q3C4">Potatoes</string>
    <string name="Question4">How many films did Sean Connery play James Bond in?</string>
    <string name="Q4C1">2</string>
    <string name="Q4C2">7</string>
    <string name="Q4C3">10</string>
    <string name="Q4C4">6</string>
    <string name="Question5">In what year was the Corvette introduced?</string>
    <string name="Q5C1">1953</string>
    <string name="Q5C2">1947</string>
    <string name="Q5C3">1970</string>
    <string name="Q5C4">1964</string>
    <string name="Question6">What is the ticker symbol of Citigroup on the NYSE?</string>
    <string name="Q6C1">CTG</string>
    <string name="Q6C2">CITI</string>
    <string name="Q6C3">C</string>
    <string name="Q6C4">CG</string>
    <string name="Question7">On which planet is the largest mountain in the solar system found?</string>
    <string name="Q7C1">Earth</string>
    <string name="Q7C2">Mars</string>
    <string name="Q7C3">Jupiter</string>
    <string name="Q7C4">Saturn</string>
    <string name="Question8">Which US president served the shortest term of only one month?</string>
    <string name="Q8C1">John Tyler</string>
    <string name="Q8C2">James Monroe</string>
    <string name="Q8C3">Millard Fillmore</string>
    <string name="Q8C4">William Henry Harrison</string>
    <string name="Question9">What are people with alektorophobia afraid of?</string>
    <string name="Q9C1">Pugs</string>
    <string name="Q9C2">Chickens</string>
    <string name="Q9C3">Beards</string>
    <string name="Q9C4">Magic</string>
    <string name="Question10">Which insect shorted out an early supercomputer and inspired the term "computer bug"?</string>
    <string name="Q10C1">Beetle</string>
    <string name="Q10C2">Roach</string>
    <string name="Q10C3">Fly</string>
    <string name="Q10C4">Moth</string>
</resources>