<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question6">


    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:text="@string/progress" />

    <TextView
        android:id="@+id/progressTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/progress"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:text="@string/progresstotal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/question6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:maxWidth="300dp"
        android:text="@string/Question6"
        android:textSize="20sp" />

    <RadioGroup android:id="@+id/Q6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="275dp">
        <RadioButton android:id="@+id/Q6C1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:textAlignment="center"
            android:background="@drawable/radio_color"
            android:text="@string/Q6C1"/>

        <RadioButton android:id="@+id/Q6C2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:textAlignment="center"
            android:background="@drawable/radio_color"
            android:text="@string/Q6C2"/>

        <RadioButton android:id="@+id/Q6C3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:textAlignment="center"
            android:background="@drawable/radio_color"
            android:text="@string/Q6C3" />

        <RadioButton android:id="@+id/Q6C4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:textAlignment="center"
            android:background="@drawable/radio_color"
            android:text="@string/Q6C4"/>
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:text="@string/submitButton" />



</RelativeLayout>