<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red"
    tools:context=".LostGame">

    <TextView
        android:id="@+id/Loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Lost"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_below="@+id/Loss"
        android:textColor="@color/Blue"
        android:text="@string/IncorrectEarning" />

    <TextView
        android:id="@+id/progressTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Loss"
        android:layout_toEndOf="@+id/earned"
        android:textColor="@color/Blue"
        android:textSize="30sp"
        android:text="@string/progresstotal" />

    <Button
        android:id="@+id/tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/tryAgain" />




</RelativeLayout>